Add last login at time in login api
